--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "src/app/menuScream.js"  ]
+, "src/context/app/menuScream.js"  ]
 }
 
