--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "@supabase/supabase-js": "^2.50.2",
-    "expo": "~53.0.11",
     "expo-auth-session": "~6.2.0",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
@@ -50,9 +49,11 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "expo": "^53.0.15",
     "typescript": "~5.8.3"
   },
   "private": true
